added controllers and fixed migrations

--- a/test/fixtures/reviews.yml
+++ b/test/fixtures/reviews.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  content: MyText
+  content: MyString
   rating: 1
-  restaurant: 
+  restaurant: one
 
 two:
-  content: MyText
+  content: MyString
   rating: 1
-  restaurant: 
+  restaurant: two
